# LiveLogAnalyzer

./: CMakeLists.txt  main.cpp
Tests/: CMakeLists.txt  MainTest.cpp  QueueDispatcher_tests.cpp  ReportPrinterMock.hpp  fileWatcher_tests.cpp  queue_test.cpp
fileWatcher/: CMakeLists.txt  fileWatcher.cpp
queueDispatcher/: CMakeLists.txt  QueueDispatcher.cpp
reportPrinter/: CMakeLists.txt  DefaultPrinter.cpp  ReportPrinter.hpp
utils/: concurrent_queue.cpp  concurrent_queue.hpp
