project(LiveLogAnalyzer)
cmake_minimum_required(VERSION 2.8.2)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -g")
add_subdirectory(Tests)
add_subdirectory(fileWatcher)
aux_source_directory(. SRC_LIST)
find_package (Threads)
include_directories(${CMAKE_SOURCE_DIR}/utils)
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries (${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
